spec/fail/wrong_type_var.ulg
let nope: String = 100 # !> Initialiser doesn't match declaration type for nope
